[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Tank_bot.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -104, 0, 0, 0, 0, 1024, -104, 0, 0, 0, 0, 1024, 496, 0, 0, 0, 0, 0, 496, 0, 0, 0, 0, 0, -104 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Tank_bot = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 175.306, 113.663 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="player"]
scale = Vector2( 0.5, 0.5 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
smoothing_enabled = true
editor_draw_limits = true

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 3.0

[node name="TankPath" type="Path2D" parent="."]
position = Vector2( 0, 104 )
curve = SubResource( 1 )

[node name="TankSpawnLocation" type="PathFollow2D" parent="TankPath"]
position = Vector2( 0, -104 )
rotation = 1.94445e-06
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
